@@ -1,1 +1,2 @@
 my $a = 1;
+state $b = 1;
