@@ -8,6 +8,8 @@ Revision history for Perl extension PPI
 	- Element line_number(), column_number(), and visual_column_number()
 	  implmented.
 	- Support for Unicode byte order marks (PPI::Token::BOM) added.
+	- Now supports the 5.10 "state" keyword.  As far as PPI is concerned,
+	  it's a synonym for "my".
 
 1.204_01
         Summary:
